# mosgortrans

./: .gitignore  Makefile  README.md  delete.py  docker-compose.test.yml  docker-compose.yml  gunicorn.sh  lefthook.yml  main.py  mos_gor.py  pyproject.toml  settings.py  setup.cfg
.github/workflows/: check-lint.yml  poetry-test.yml  test-selenoid.yml
app/: main.py  settings.py
app/config/: .env.template
app/core/: application.py  bot.py  logger.py  parse_web.py  routes.py  scheduler.py  utils.py
app/tests/: conftest.py  dataset.py  factories.py  models.py  test_parse_web.py
app/tests/bot/: test_bot.py
app/tests/data/: factories.py  models.py
config/: .env.template
deploy/: Caddyfile  Dockerfile  Dockerfile.bot  Dockerfile.selenoid  browsers.json
scripts/: mosgortrans.service  shutdown-bot.sh  start-bot.sh  stop-bot.sh
tests/: conftest.py  docker-compose.yml
tests/bot/: test_bot.py  test_bot_selenoid.py
tests/data/: factories.py  models.py
