[tool.poetry]
name = "mosgortrans"
version = "0.7.1"
description = "Bot to help with mosgortans"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"
selenium = "^4.3.0"
httpx = "^0.23.0"
wget = "^3.2"
loguru = "^0.6.0"
python-decouple = "^3.6"
apscheduler = "^3.9.1"
gunicorn = "^20.1.0"

factory-boy = "^3.2.1"
Faker = "^15.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
pre-commit = "^2.21.0"
safety = "^2.3.4"
yamllint = "^1.26.3"
tomlkit = "^0.7.2"
bandit = "1.7.4"
requests = "^2.28.0"
aresponses = "^2.1"

pyupgrade = "^2.24.0"
isort = "^5.11.4"
black = "^22.12.0"

mypy = "^0.991"
types-PyMySQL = "^1.0.11"
types-python-dateutil = "^2.8.4"

pytest = "^7.2.0"
pytest-asyncio = "^0.15.1"
pytest-deadfixtures = "^2.2.1"
pytest-testmon = "^1.1.2"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
pytest-timeout = "^1.4.2"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pytest-env = "^0.6.2"
nest-asyncio = "^1.5.1"

autoflake = "^1.7.8"
flake8 = "^5.0.4"
flake8-logging-format = "^0.9.0"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-pytest-style = "^1.6.0"
flake8-aaa = "^0.12.0"
flake8-bugbear = "^22.12.6"
flake8-debugger = "^4.1.2"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-simplify = "^0.19.3"
flake8-variables-names = "^0.0.5"
flake8-bandit = "4.1.1"
flake8-tidy-imports = "^4.8.0"


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["LenokWinServer",]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false


[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.black]
skip-string-normalization = true