[tool.poetry]
name = "mosgortrans"
version = "0.7.1"
description = "Bot to help with mosgortans"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.2"
selenium = "^4.14"
httpx = "^0.25"
wget = "^3.2"
loguru = "^0.7"
python-decouple = "^3.8"
apscheduler = "^3.10"
gunicorn = "^21.2"

factory-boy = "^3.3"
Faker = "^18.3.0"
wheel = "^0.41"

[tool.poetry.dev-dependencies]
ipython = "^8.16"
pre-commit = "^3.5"
safety = "^2.3"
pip-audit = "^2.6"
yamllint = "^1.32"
tomlkit = "^0.12"
bandit = "^1.7"
aresponses = "^2.1"

pyupgrade = "^3.15"
isort = "^5.12"
black = "^23.10"

mypy = "^1.6"
types-PyMySQL = "^1.0"
types-python-dateutil = "^2.8"

pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-deadfixtures = "^2.2"
pytest-testmon = "^2.0"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
pytest-timeout = "^2.2"
pytest-sugar = "^0.9"
pytest-clarity = "^1.0"
pytest-env = "^1.1"
nest-asyncio = "^1.5"

autoflake = "^2.2"
flake8 = "^6.1"
flake8-logging-format = "^0.9"
flake8-comprehensions = "^3.14"
flake8-eradicate = "^1.5"
flake8-pytest-style = "^1.7"
flake8-aaa = "^0.16"
flake8-bugbear = "^23.9"
flake8-debugger = "^4.1"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1"
flake8-simplify = "^0.21"
flake8-variables-names = "^0.0.6"
flake8-bandit = "^4.1"
flake8-tidy-imports = "^4.10"


[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["app", "tests"]
combine_as_imports = true


[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false


[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.black]
skip-string-normalization = true